edited a spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ p {
     display: none !important;
 }
 .WUW-hc {
-    padding-top: 10%;
+    padding-top: 5%;
 	text-align: center;
 	font-size: 90px;
 }
